--- a/setup.cfg
+++ b/setup.cfg
@@ -8,5 +8,5 @@ description = sigproc: Personal Python Package
 
 [options]
 zip_safe = False
-install_requires = ['numpy', 'pandas']
-packages = ['src']
+install_requires = numpy; pandas
+packages = src
